--- a/client/public/main.css
+++ b/client/public/main.css
@@ -11,11 +11,6 @@ body {
     background-color: rgb(85, 0, 85);
 }
 
-#root {
-    height: 100vh;
-    overflow: hidden;
-}
-
 .header {
     display: flex;
     justify-content: space-between;
@@ -57,4 +52,17 @@ a {
     display: flex;
     justify-content: flex-end;
     padding: 0 20px;
+}
+
+.addBtn {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    color: white;
+    background: rgb(85, 0, 85);
+    border-radius: 50%;
+    font-weight: bold;
+    box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.7);
 }
