--- a/client/public/main.css
+++ b/client/public/main.css
@@ -30,7 +30,6 @@ a {
 
 .container {
     width: 100%;
-    height: 93vh;
     padding-top: 10px;
     background-color: white;
     border-top-left-radius: 15px;
@@ -65,4 +64,13 @@ a {
     border-radius: 50%;
     font-weight: bold;
     box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.7);
+}
+
+.searchInput {
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 20px;
+    outline: none;
+    margin-top: 10px;
 }
